<resources>
    <string name="app_name">Claero Auto</string>
    <string name="title_activity_main">Claero Auto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_vehicle">Add New Vehicle</string>
    <string name="title_activity_login">Sign in to Claero</string>
    <string name="title_activity_add_card">Add New Card</string>
    <string name="title_activity_location">Location</string>

    <!-- Strings related to Menu Items -->
    <string name="action_log_out">Log out</string>
    <string name="action_delete_acct">Delete Account</string>
    <string name="action_intro">Intro Screen</string>


    <string name="parse_error">Something went wrong and our team has been notified.</string>

    <!-- Strings related to AddVehicle -->
    <string name="decode_vin_error">Something went wrong, check your internet connection.</string>
    <string name="decode_has_vin">It looks like you\'ve already registered this vehicle.</string>
    <string name="decode_invalid_vin">It looks like this VIN is invalid.</string>
    <string name="scanner_no_vin">The scanner couldn\'t find a VIN. Please try again.</string>
    <string name="vin_reader_fail">An error occurred. Try entering your VIN manually.</string>
    <string name="cam_fail_error">Unable to lead the camera. Our team is working on it.</string>

    <!-- Strings related to AddCardActivity -->
    <string name="card_invalid">Please enter a valid card.</string>
    <string name="token_valid">Your payment method has been saved.</string>
    <string name="token_invalid">Your payment method could not be verified.</string>
    <string name="token_parse">Your payment method failed to save, our team has been notified.</string>
    <string name="bank_linked">Bank Account successfully linked.</string>
    <string name="bank_failed">Bank Account could not be linked. Our team has been notified.</string>
    <string name="bank_exit">Let\'s not add a bank account today.</string>


    <!-- Strings related to LoginActivity -->
    <string name="welcome_back">Welcome back, %s!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirm Password</string>
    <string name="error_invalid_email">Please enter a valid e-mail address.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_payment">Add Service</string>
    <string name="login_invalid">Login failed, please check your login information.</string>
    <string name="signup_invalid">Registration failed, please check your information.</string>
    <string name="login_error">Something went wrong. Try again in a little bit.</string>
    <string name="email_taken">That e-mail is already associated with a user.</string>
    <string name="password_reset">A password reset request has been sent.</string>
    <string name="password_reset_fail">Something went wrong. Check your e-mail address and try again.</string>
    <string name="logout_error">Something went wrong, sorry about that!</string>

    <string name="verify_instructions">Check your inbox for a verification\ne-mail from Claero Auto.</string>
    <string name="verify_header">Verify E-mail</string>
    <string name="enter_email">Please enter your email address above.</string>
    <string name="password_mismatch">Please verify that your passwords match.</string>
    <string name="email_verify_error">The server could not be contacted. Try again in a little bit.</string>
    <string name="verify_spam">Note: try looking in your spam folder.</string>
    <string name="password_regex">Double-check minimum password requirements.</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_log_in">or log in</string>
    <string name="log_in">Log In</string>
    <string name="or_sign_up">or sign up</string>
    <string name="verify_failed">Unable to pull verification data from server. Click here to continue.</string>

    <!-- Strings related to IntroActivity -->
    <string name="intro_welcome_header">Welcome to Claero!</string>
    <string name="intro_swipe">Swipe to continue</string>
    <string name="intro_technology_header">Car care for the 21st century.</string>
    <string name="intro_technology_description">Manage your vehicles, book services and communicate with your advisor,
        all from your phone.
    </string>
    <string name="intro_convenience_subheader">Designed for your convenience.</string>
    <string name="intro_convenience_description">No more wasting time in lobbies. Pick-up and drop-off are always
        included at no extra cost.
    </string>
    <string name="intro_peace_subheader">Ultimate peace of mind.</string>
    <string name="intro_peace_description">Never again worry about surprise maintenance costs with our
        subscription plans.
    </string>
    <string name="intro_efficiency_subheader">Working towards a shared goal.</string>
    <string name="intro_efficiency_description">We\'ll make sure your vehicle performs its best at all times,
        saving you money and reducing emissions.
    </string>
    <string name="intro_continue_subheader">Onward and upward!</string>
    <string name="intro_continue_description">Sign up on the next page to see how we can help you to have one less thing
        to worry about.
    </string>
    <string name="intro_verification_header">Verification</string>
    <string name="intro_verification_subheader">Verify your e-mail address.</string>
    <string name="intro_verification_description">To protect your account, we will require a quick and easy e-mail
        verification.
    </string>
    <string name="login_welcome">Welcome to Claero!</string>
    <string name="login_instructions">Please enter your e-mail and password to continue:</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="name_given">First Name</string>
    <string name="details_instructions">Tell us a little more about yourself:</string>
    <string name="name_family">Last Name</string>
    <string name="password_requirements">Password requirements?</string>


    <string name="thumb_desc">Vehicle Thumbnail</string>
    <string name="title_activity_add_vehicle_demo">Add New Vehicle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
