<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:theme="@style/DarkActivity"
        tools:context=".welcome.LoginActivity"
        android:id="@+id/layoutLogin">

    <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/login_welcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/layoutFields" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@id/textWelcome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true" app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:text="@string/login_instructions"
                android:textAlignment="center"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout.Dark"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/textEmail">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEmail"
                    style="@style/TextAppearance.AppCompat.EditText.Dark"
                    android:theme="@style/EditTextTheme.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout.Dark"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/editPass"
                    style="@style/TextAppearance.AppCompat.EditText.Dark"
                    android:theme="@style/EditTextTheme.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"/>

        </android.support.design.widget.TextInputLayout>

        <EditText
                android:id="@+id/editConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutPass"
                style="@style/TextAppearance.AppCompat.EditText.Dark"
                android:textColorHint="@color/colorWhiteFaded"
                android:theme="@style/EditTextTheme.Dark"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/prompt_confirm" tools:ignore="Autofill"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/layoutButtons"
            app:layout_constraintTop_toBottomOf="@id/layoutFields" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true">

        <TextView
                android:id="@+id/textForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/buttonLogin"
                style="@style/AppTheme.Buttons.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/colorWhiteFaded"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="16sp" android:text="@string/sign_up"/>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressSubmit"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                app:layout_constraintTop_toTopOf="@id/buttonLogin"
                app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
                app:layout_constraintEnd_toEndOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="@id/buttonLogin"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textLoginSwap"
                android:clickable="false"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toEndOf="@id/buttonLogin"
                app:layout_constraintTop_toTopOf="@id/buttonLogin" android:padding="8dp"
                android:text="@string/or_log_in"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>