<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:theme="@style/DarkActivity"
        tools:context=".welcome.LoginActivity$DetailsFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/layoutNames"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true" android:layout_marginTop="84dp"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:text="@string/details_instructions"
                android:textAlignment="center"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"/>

        <EditText
                android:id="@+id/editNameGiven"
                style="@style/TextAppearance.AppCompat.EditText.Dark"
                android:textColorHint="@color/colorWhiteFaded"
                android:theme="@style/EditTextTheme.Dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_given"
                android:textSize="18sp" android:ems="12"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textEmail" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:id="@+id/editNameFamily"
                style="@style/TextAppearance.AppCompat.EditText.Dark"
                android:theme="@style/EditTextTheme.Dark"
                android:textColorHint="@color/colorWhiteFaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:hint="@string/name_family" android:ems="12"
                app:layout_constraintTop_toBottomOf="@+id/editNameGiven" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/buttonConfirm"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/colorWhiteFaded"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp" android:text="Confirm" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutNames"/>

</android.support.constraint.ConstraintLayout>